// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inputs Bad source input 1`] = `
Array [
  Object {
    "exn": Object {
      "RE_EXN_ID": "Caml_js_exceptions.Error/1",
      "_1": [TypeError: source.str.charAt is not a function],
    },
    "kind": "Compile",
    "location": undefined,
    "message": "An exception was thrown while compiling this template. This is probably due to malformed input.",
    "path": Array [
      "Template",
    ],
  },
]
`;

exports[`Lexer Illegal binding names 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 6,
    },
    "message": "Unexpected token: \\"null\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Lexer Illegal binding names 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 6,
    },
    "message": "Unexpected token: \\"false\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Lexer Illegal characters 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Syntax",
    "location": Object {
      "character": 11,
    },
    "message": "Invalid character: \\"*\\".",
    "path": Array [
      "BadCharacter",
    ],
  },
]
`;

exports[`Lexer Illegal characters 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Syntax",
    "location": Object {
      "character": 6,
    },
    "message": "Unexpected character: \\"a\\". Expected: \\".\\".",
    "path": Array [
      "BadCharacter",
    ],
  },
]
`;

exports[`Lexer Illegal characters 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Syntax",
    "location": Object {
      "character": 6,
    },
    "message": "Unexpected character: \\"b\\". Expected: \\".\\".",
    "path": Array [
      "BadCharacter",
    ],
  },
]
`;

exports[`Lexer Illegal characters 4`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Syntax",
    "location": Object {
      "character": 16,
    },
    "message": "Unexpected character: \\"%\\". Expected: \\"}\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Lexer Illegal characters 5`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Syntax",
    "location": Object {
      "character": 8,
    },
    "message": "Invalid character: \\"%\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Lexer Illegal characters 6`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 8,
    },
    "message": "Unexpected token: \\"b\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Lexer Illegal characters 7`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 6,
    },
    "message": "Unexpected token: \\"?\\".",
    "path": Array [
      "BadCharacter",
    ],
  },
]
`;

exports[`Lexer Illegal characters 8`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Syntax",
    "location": Object {
      "character": 10,
    },
    "message": "Unexpected character: \\"%\\". Expected: \\"}\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Lexer Other stuff 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Syntax",
    "location": Object {
      "character": 8,
    },
    "message": "Unterminated string.",
    "path": Array [
      "BadString",
    ],
  },
]
`;

exports[`Lexer Other stuff 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Syntax",
    "location": Object {
      "character": 9,
    },
    "message": "Unterminated string.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Lexer Other stuff 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Syntax",
    "location": Object {
      "character": 5,
    },
    "message": "Unterminated comment.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Lexer Other stuff 4`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Syntax",
    "location": Object {
      "character": 5,
    },
    "message": "Unterminated comment.",
    "path": Array [
      "BadComment",
    ],
  },
]
`;

exports[`Lexer Other stuff 5`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Syntax",
    "location": Object {
      "character": 7,
    },
    "message": "Unexpected end of file.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Lexer Other stuff 6`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Syntax",
    "location": Object {
      "character": 6,
    },
    "message": "\\"--1\\" is an illegal identifier name.",
    "path": Array [
      "BadIdentifier",
    ],
  },
]
`;

exports[`Lexer Other stuff 7`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Syntax",
    "location": Object {
      "character": 7,
    },
    "message": "Unknown escape sequence: a.",
    "path": Array [
      "InvalidEscapeToken",
    ],
  },
]
`;

exports[`Parser Components that didn't compile are reported correctly 1`] = `
Object {
  "NAME": "errors",
  "VAL": Array [
    Object {
      "exn": undefined,
      "kind": "Syntax",
      "location": Object {
        "character": 3,
      },
      "message": "Unexpected end of file.",
      "path": Array [
        "A",
      ],
    },
  ],
}
`;

exports[`Parser Duplicate components are reported correctly 1`] = `
Object {
  "NAME": "errors",
  "VAL": Array [
    Object {
      "exn": undefined,
      "kind": "Compile",
      "location": undefined,
      "message": "The template component name \\"A\\" was used twice. Every component needs a unique name.",
      "path": Array [],
    },
  ],
}
`;

exports[`Parser Illegal binding name 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 10,
    },
    "message": "Unexpected token: \\"null\\".",
    "path": Array [
      "BadBinding",
    ],
  },
]
`;

exports[`Parser Illegal binding name 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 13,
    },
    "message": "Unexpected token: \\"null\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Illegal binding name 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 24,
    },
    "message": "Unexpected token: \\"null\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Illegal binding name 4`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 6,
    },
    "message": "Unexpected token: \\"null\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Invalid statements 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 6,
    },
    "message": "Unexpected token: \\"c\\".",
    "path": Array [
      "BadStatement",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 6,
    },
    "message": "Unexpected token: \\"{\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 6,
    },
    "message": "Unexpected token: \\"[\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 6,
    },
    "message": "Unexpected token: \\"}\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 4`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 6,
    },
    "message": "Unexpected token: \\"]\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 5`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 6,
    },
    "message": "Unexpected token: \\",\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 6`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 10,
    },
    "message": "Unexpected token: \\"/\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 7`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 6,
    },
    "message": "Unexpected token: \\":\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 8`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 6,
    },
    "message": "Unexpected token: \\"\\"a\\"\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 9`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 6,
    },
    "message": "Unexpected token: \\"1\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 10`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 10,
    },
    "message": "Unexpected token: \\"[\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 11`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 10,
    },
    "message": "Unexpected token: \\"1\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 12`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 13,
    },
    "message": "Unexpected token: \\"[\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 13`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 13,
    },
    "message": "Unexpected token: \\"1\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 14`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 28,
    },
    "message": "Unexpected token: \\"[end of file]\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 15`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 31,
    },
    "message": "Unexpected token: \\"[end of file]\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 16`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 6,
    },
    "message": "Unexpected token: \\"/\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 17`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 8,
    },
    "message": "Unexpected token: \\"#\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 18`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 21,
    },
    "message": "Unexpected token: \\"[text]:  d\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 19`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 8,
    },
    "message": "Unexpected token: \\"1\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 20`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 4,
    },
    "message": "Unexpected token: \\"...\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 21`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 4,
    },
    "message": "Unexpected token: \\"=\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 22`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 10,
    },
    "message": "Unexpected token: \\"~\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 23`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 8,
    },
    "message": "Unexpected token: \\"match\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 24`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 6,
    },
    "message": "Unexpected token: \\"&\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser You can't unescape child templates 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 5,
    },
    "message": "Unexpected token: \\"A\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Count mismatch failure 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Pattern",
    "location": Object {
      "character": 10,
    },
    "message": "The number of patterns does not match the number of data.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Count mismatch failure 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 4,
    },
    "message": "Map blocks can only have two patterns per \\"with\\" clause: the item and the index.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Illegal bindings 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 25,
    },
    "message": "Unexpected token: \\"Abc\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Illegal bindings 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 24,
    },
    "message": "Unexpected token: \\"null\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Illegal bindings 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 24,
    },
    "message": "Unexpected token: \\"true\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Illegal bindings 4`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 25,
    },
    "message": "Unexpected token: \\"false\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Illegal bindings 5`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 5,
    },
    "message": "Unexpected token: \\"null\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Missing bindings 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Decode",
    "location": undefined,
    "message": "Input is missing JSON object key \\"b\\" which is required.",
    "path": Array [],
  },
]
`;

exports[`Patterns Missing bindings 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Decode",
    "location": undefined,
    "message": "Input is missing JSON object key \\"b\\" which is required.",
    "path": Array [],
  },
]
`;

exports[`Patterns Missing bindings 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Decode",
    "location": undefined,
    "message": "This input is type \\"JSON null\\", which does not match the template's required type, [int].",
    "path": Array [
      "key: c",
    ],
  },
]
`;

exports[`Patterns Non-exhuastive matching 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Matching",
    "location": Object {
      "character": 11,
    },
    "message": "This pattern-matching is not exhaustive.
Here is an example of a case that is not matched:
{favoriteColor: \\"a\\", firstName}",
    "path": Array [],
  },
]
`;

exports[`Patterns Type errors Boolean pattern 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 34,
    },
    "message": "This pattern is type boolean but expected type string.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors Boolean pattern 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 34,
    },
    "message": "This pattern is type boolean but expected type string.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors Boolean pattern 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 32,
    },
    "message": "This pattern is type boolean but expected type int.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors Boolean pattern 4`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 32,
    },
    "message": "This pattern is type boolean but expected type int.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors Boolean pattern 5`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 34,
    },
    "message": "This pattern is type boolean but expected type [int].",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors Boolean pattern 6`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 34,
    },
    "message": "This pattern is type boolean but expected type [int].",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors Boolean pattern 7`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 40,
    },
    "message": "This pattern is type boolean but expected type {\\"a\\": _}.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors List pattern 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 32,
    },
    "message": "This pattern is type [int] but expected type string.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors List pattern 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 32,
    },
    "message": "This pattern is type [int] but expected type string.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors List pattern 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 33,
    },
    "message": "This pattern is type [int] but expected type boolean.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors List pattern 4`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 34,
    },
    "message": "This pattern is type [_] but expected type boolean.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors List pattern 5`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 30,
    },
    "message": "This pattern is type [_] but expected type int.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors List pattern 6`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 40,
    },
    "message": "This pattern is type [_] but expected type {\\"a\\": _}.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors List pattern 7`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 40,
    },
    "message": "This pattern is type int but expected type string.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors Record pattern 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 33,
    },
    "message": "This pattern is type {\\"a\\": _} but expected type string.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors Record pattern 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 34,
    },
    "message": "This pattern is type {\\"a\\": _} but expected type boolean.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors Record pattern 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 35,
    },
    "message": "This pattern is type {\\"a\\": _} but expected type boolean.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors Record pattern 4`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 32,
    },
    "message": "This pattern is type {\\"a\\": _} but expected type [_].",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors Record pattern 5`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 31,
    },
    "message": "This pattern is type {\\"a\\": _} but expected type int.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors Record pattern 6`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 37,
    },
    "message": "This pattern is type int but expected type string.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors number pattern 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 34,
    },
    "message": "This pattern is type int but expected type string.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors number pattern 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 35,
    },
    "message": "This pattern is type int but expected type boolean.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors number pattern 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 36,
    },
    "message": "This pattern is type int but expected type boolean.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors number pattern 4`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 33,
    },
    "message": "This pattern is type int but expected type [_].",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors number pattern 5`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 40,
    },
    "message": "This pattern is type int but expected type {\\"a\\": _}.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors string pattern 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 32,
    },
    "message": "This pattern is type string but expected type int.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors string pattern 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 35,
    },
    "message": "This pattern is type string but expected type boolean.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors string pattern 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 36,
    },
    "message": "This pattern is type string but expected type boolean.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors string pattern 4`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 34,
    },
    "message": "This pattern is type string but expected type [int].",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors string pattern 5`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 40,
    },
    "message": "This pattern is type string but expected type {\\"a\\": _}.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Unexpected tokens 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 17,
    },
    "message": "Unexpected token: \\"}\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Unexpected tokens 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 18,
    },
    "message": "Unexpected token: \\",\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Unexpected tokens 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 18,
    },
    "message": "Unexpected token: \\"1\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Unexpected tokens 4`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 22,
    },
    "message": "Unexpected token: \\"[\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Unexpected tokens 5`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 20,
    },
    "message": "Unexpected token: \\"\\"a\\"\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Unexpected tokens 6`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 21,
    },
    "message": "Unexpected token: \\",\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Unexpected tokens 7`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 24,
    },
    "message": "Unexpected token: \\"\\"a\\"\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Unexpected tokens 8`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 24,
    },
    "message": "Unexpected token: \\"{\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Unexpected tokens 9`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 26,
    },
    "message": "Unexpected token: \\"[\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Unexpected tokens 10`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 26,
    },
    "message": "Unexpected token: \\"b\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Unexpected tokens 11`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 20,
    },
    "message": "Unexpected token: \\"b\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Unexpected tokens 12`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 20,
    },
    "message": "Unexpected token: \\"]\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Unexpected tokens 13`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 12,
    },
    "message": "Unexpected token: \\"}\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Unexpected tokens 14`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 12,
    },
    "message": "Unexpected token: \\"match\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Unexpected tokens 15`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 19,
    },
    "message": "Unexpected token: \\"a\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Unexpected tokens 16`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 27,
    },
    "message": "Unexpected token: \\"map\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Unexpected tokens 17`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 27,
    },
    "message": "Unexpected token: \\"1\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Unexpected tokens 18`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 14,
    },
    "message": "Unexpected token: \\"B\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Unexpected tokens 19`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 14,
    },
    "message": "Unexpected token: \\"1\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Unexpected tokens 20`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 6,
    },
    "message": "Unexpected token: \\"1\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns You can't bind a value more than once. 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Pattern",
    "location": Object {
      "character": 21,
    },
    "message": "\\"x\\" is bound multiple times in this pattern.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Rendering Error messages display component name correctly 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 4,
    },
    "message": "This call of component \\"A\\" is missing prop \\"a\\" of type echoable.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Rendering Exceptions thrown in components are caught correctly 1`] = `
Array [
  Object {
    "exn": Object {
      "Error": [Error],
      "RE_EXN_ID": "Failure",
      "_1": "fail.",
    },
    "kind": "Render",
    "location": undefined,
    "message": "An exception was thrown while rendering a template component.",
    "path": Array [
      "ExceptionsTest",
    ],
  },
]
`;

exports[`Rendering Map type mismatches 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Decode",
    "location": undefined,
    "message": "This input is type \\"JSON string\\", which does not match the template's required type, [{\\"a\\": echoable}].",
    "path": Array [
      "key: a",
    ],
  },
]
`;

exports[`Rendering Map type mismatches 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Decode",
    "location": undefined,
    "message": "This input is type \\"JSON boolean\\", which does not match the template's required type, [{\\"a\\": echoable}].",
    "path": Array [
      "key: b",
    ],
  },
]
`;

exports[`Rendering Map type mismatches 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Decode",
    "location": undefined,
    "message": "This input is type \\"JSON string\\", which does not match the template's required type, [int].",
    "path": Array [
      "key: a",
    ],
  },
]
`;

exports[`Rendering Map type mismatches 4`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Decode",
    "location": undefined,
    "message": "Input is missing JSON object key \\"z\\" which is required.",
    "path": Array [],
  },
]
`;

exports[`Rendering Missing bindings 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Decode",
    "location": undefined,
    "message": "Input is missing JSON object key \\"z\\" which is required.",
    "path": Array [],
  },
]
`;

exports[`Rendering Missing bindings 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Decode",
    "location": undefined,
    "message": "Input is missing required template child \\"Z.\\"",
    "path": Array [],
  },
]
`;

exports[`Rendering Missing bindings 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Compile",
    "location": Object {
      "character": 4,
    },
    "message": "Template component \\"Z\\" is missing, which is required by \\"<root>.\\"",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Rendering Missing bindings 4`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Decode",
    "location": undefined,
    "message": "Input is missing required template child \\"C.\\"",
    "path": Array [],
  },
]
`;

exports[`Rendering Missing bindings 5`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Decode",
    "location": undefined,
    "message": "Input is missing JSON object key \\"b\\" which is required.",
    "path": Array [],
  },
]
`;

exports[`Rendering Type mismatches 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Decode",
    "location": undefined,
    "message": "This input is type \\"JSON boolean\\", which does not match the template's required type, echoable.",
    "path": Array [
      "key: b",
    ],
  },
]
`;

exports[`Rendering Type mismatches 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Decode",
    "location": undefined,
    "message": "This input is type \\"JSON array\\", which does not match the template's required type, echoable.",
    "path": Array [
      "key: c",
    ],
  },
]
`;

exports[`Rendering Type mismatches 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Decode",
    "location": undefined,
    "message": "This input is type \\"JSON boolean\\", which does not match the template's required type, echoable.",
    "path": Array [
      "key: b",
    ],
  },
]
`;

exports[`Stack trace is rendered correctly components 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 27,
    },
    "message": "This call of component \\"C\\" is missing prop \\"c\\" of type echoable.",
    "path": Array [
      "B",
    ],
  },
]
`;
